--- a/rambam.html
+++ b/rambam.html
@@ -97,11 +97,9 @@
             }
             return res;
         }
-
         function isHebrewLeapYear(year) {
             return (year * 7 + 1) % 19 < 7;
         }
-
         function calcFirstDayOfPassover(year) {
             const T = (33. + 14. / 24.);
             const L = ((1. + 485. / 1080.) / 24. / 19.);
@@ -158,7 +156,6 @@
             d.setDate(d.getDate() + FromPassoverToRH);
             return d;
         }
-
     </script>
     <script type="text/javascript" name="actions">
         let currentShiur = 0;
@@ -171,12 +168,26 @@
             weekDay = (weekDay + 1) % 7;
         }
         function populateTable() {
+            const milliSecondsInDay = 24 * 60 * 60 * 1000;
             const months = ['תשרי', 'חשוון', 'כסלו', 'טבת', 'שבט', 'אדר', 'ניסן', 'אייר', 'סיוון', 'תמוז', 'אב', 'אלול'];
             let year = $('select option:selected').val();
             $('aside').toggle(year == 5744);
             $('tr').empty();
             $('thead tr').append($('<th></th>'));
             let isLeapYear = isHebrewLeapYear(year);
+            let roshHashana = calcRoshHashana(year);
+            let diff = Math.floor((roshHashana - RambamEpoch) / (milliSecondsInDay) + 2 / 24);// add 2 hours - for power saving time
+            console.log(roshHashana, roshHashana - RambamEpoch, diff);
+            let lastDayOfCurrentMonth = new Date(roshHashana);
+            lastDayOfCurrentMonth.setDate(lastDayOfCurrentMonth.getDate() + 29);
+            currentShiur = (diff % 339)
+            if (currentShiur < 1) {
+                currentShiur += 339;
+            }
+            weekDay = diff % 7; // "RambamEpoch" was Saturday
+            if (weekDay < 0) {
+                weekDay += 7;
+            }
             for (let i = 0; i < months.length; i++) {
                 let month = months[i];
                 if (month == 'אדר' && isLeapYear) {
@@ -187,13 +198,6 @@
             for (let i = 1; i <= 30; i++) {
                 $('tr#line' + i).append($('<th>' + gimatria(i) + '</th>'));
             }
-            let roshHashana = calcRoshHashana(year);
-            console.log(roshHashana);
-            let diff = roshHashana - RambamEpoch;
-            let lastDayOfCurrentMonth = new Date(roshHashana);
-            lastDayOfCurrentMonth.setDate(lastDayOfCurrentMonth.getDate() + 29);
-            currentShiur = (diff % 339) || 339;
-            weekDay = diff % 7; // "RambamEpoch" was Saturday
             for (let month = 0; month < (isLeapYear ? 13 : 12); month++) {
                 for (let line = 1; line <= 29; line++) {
                     addCell(line);
