--- a/rambam.html
+++ b/rambam.html
@@ -3,6 +3,11 @@
 
 <head>
     <title>מורה שיעור ספר המצוות</title>
+    <style type="text/css">
+        td{
+            padding: 2px;
+        }
+    </style>
     <script type="text/javascript" name="functions">
         function gimatria(num) {
             const gim = {
