--- a/myHomePage.html
+++ b/myHomePage.html
@@ -4,8 +4,6 @@
 </head>
 <body dir="rtl">
 <h1>ועתה ישראל מה ה' אלוקיך שואל מעמך</h1>
-<div>
-
-</div>
+<div><a href="https://mmb.org.il/%D7%93%D7%99%D7%90%D7%98%D7%94-%D7%93%D7%99%D7%92%D7%99%D7%98%D7%9C%D7%99%D7%AA/">דיאטה דיגיטלית</a></div>
 </body>
 </html>
