עוד כמה קישורים

--- a/myHomePage.html
+++ b/myHomePage.html
@@ -4,6 +4,16 @@
 </head>
 <body dir="rtl">
 <h1>ועתה ישראל מה ה' אלוקיך שואל מעמך</h1>
-<div><a href="https://mmb.org.il/%D7%93%D7%99%D7%90%D7%98%D7%94-%D7%93%D7%99%D7%92%D7%99%D7%98%D7%9C%D7%99%D7%AA/">דיאטה דיגיטלית</a></div>
+<lu>
+<li><a href="https://www.chabad.org.il/Lessons/Lessons.asp?CategoryID=175">חתת כבר למדת?</a></li>
+<li><a href="#">זכרונות משפחת ברגר</a></li>
+<li><a href="#">זכרונות משפחת ליכט</a></li>
+<li><a href="#">זכרונות משפחת ונקרט</a></li>
+<li><a href="https://mmb.org.il/%D7%93%D7%99%D7%90%D7%98%D7%94-%D7%93%D7%99%D7%92%D7%99%D7%98%D7%9C%D7%99%D7%AA/">דיאטה דיגיטלית</a></li>
+<li><a href="https://beinhazmanim.iyun.org.il/">בין הזמנים</a></li>
+</lu>
 </body>
+<!-- 
+<li><a href="#"></a></li>
+-->
 </html>
