--- a/myHomePage.html
+++ b/myHomePage.html
@@ -1,9 +1,9 @@
 <html dir="ltr">
 <head>
-<title>ועתה ישראל מה ה' אלוקיך שואל מעמך</title>
+<title>ישראל, מה ה' אלוקיך שואל מעמך עתה?</title>
 </head>
 <body dir="rtl">
-<h1>ועתה ישראל מה ה' אלוקיך שואל מעמך</h1>
+<h1>ישראל, מה ה' אלוקיך שואל מעמך עתה?</h1>
 <lu>
 <li><a href="https://www.chabad.org.il/Lessons/Lessons.asp?CategoryID=175">חתת כבר למדת?</a></li>
 <li><a href="#">זכרונות משפחת ברגר</a></li>
